# serde-pickle

./: .dockerignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Mayhemfile  README.md
.github/workflows/: main.yml
benches/: benchmark.rs
benches/data/: biglist.pickle  genperfdata.py  manyrefs.pickle  manystrings.pickle
examples/: pickle.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parsing.rs
fuzz/fuzzers/: parsing.rs
src/: consts.rs  de.rs  error.rs  lib.rs  ser.rs  value.rs  value_impls.rs
test/: arby.rs  mod.rs
test/data/: generate.py  test_recursive_proto0.pickle  test_recursive_proto1.pickle  test_recursive_proto2.pickle  test_recursive_proto3.pickle  test_recursive_proto4.pickle  test_recursive_proto5.pickle  test_unresolvable_global.pickle  tests_py2_proto0.pickle  tests_py2_proto1.pickle  tests_py2_proto2.pickle  tests_py3_proto0.pickle  tests_py3_proto1.pickle  tests_py3_proto2.pickle  tests_py3_proto3.pickle  tests_py3_proto4.pickle  tests_py3_proto5.pickle
