[package]
name = "serde-pickle"
version = "1.0.0"
authors = ["Georg Brandl <georg@python.org>"]
license = "MIT/Apache-2.0"
description = "A serde-based serialization library for Python's pickle format"
repository = "https://github.com/birkenfeld/serde-pickle"
documentation = "http://docs.rs/serde-pickle"
keywords = ["pickle", "python", "serde", "serialization"]
edition = "2018"

[dependencies]
serde = "1.0.104"
byteorder = "1.3.2"
num-bigint = "0.4.0"
num-traits = "0.2.10"
iter-read = "0.3.0"

# For the example binary and the test suite.
[dev-dependencies]
serde_derive = "1.0.104"
serde_json = "1.0.44"
rand = "0.7"
quickcheck = "0.9.0"

[features]
# Benchmarking needs nightly.
unstable = []
